--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-
+    <uses-permission android:name="android.permission.VIBRATE" />
 
 
     <application
@@ -48,11 +48,7 @@
             android:screenOrientation="portrait">
 
         </activity>
-        <activity android:name=".MyIntro"
-            android:windowSoftInputMode="adjustPan"
-            android:configChanges="locale|orientation"
-            android:screenOrientation="portrait">
-        </activity>
+
         <activity android:name=".Menu"
             android:windowSoftInputMode="adjustPan"
             android:configChanges="locale|orientation"
