--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "majamacu.JUMOAPP"
@@ -19,18 +19,17 @@ android {
     }
 }
 dependencies {
-    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.android.support:appcompat-v7:23.3.0'
 
 }
 dependencies {
-    compile 'com.parse.bolts:bolts-android:1.+'
-    compile fileTree(dir: 'libs', include: 'Parse-*.jar')
+    compile 'com.parse.bolts:bolts-tasks:1.3.0'
+    compile 'com.parse:parse-android:1.13.0'
+
 }
+
 dependencies {
-    compile files('libs/mobilecore_V1.1.jar')
-}
-dependencies {
-    compile 'com.google.android.gms:play-services-ads:7.8.0'
+    compile 'com.google.android.gms:play-services-ads:8.4.0'
 }
 repositories {
     mavenCentral()
